--- a/style.css
+++ b/style.css
@@ -180,6 +180,38 @@ small {
     background-color: #c0392b;
 }
 
+
+.edit-button {
+    background-color: #3498db;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 3px;
+    cursor: pointer;
+    margin-right: 5px;
+}
+
+.edit-button:hover {
+    background-color: #2980b9;
+}
+
+.cancel-button {
+    background-color: #f39c12;
+    color: white;
+}
+
+.cancel-button:hover {
+    background-color: #d35400;
+}
+
+/* Asegurar que los botones en las celdas de acción estén uno al lado del otro */
+td .edit-button, td .delete-button {
+    display: inline-block;
+    margin-bottom: 5px;
+}
+
+
+
 .frequency-row {
     display: flex;
     gap: 10px;
