--- a/style.css
+++ b/style.css
@@ -387,3 +387,9 @@ td .edit-button, td .delete-button {
     color: gray;
     padding: 0px 0px 15px 0px;
 }
+
+.container p{
+    font-size: small;
+    color: gray;
+    padding: 0px 0px 15px 0px;
+}
